--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
                             <div class="testo">
                                 <h3>Email</h3>
-                                <p>mailto:pienatale@icloud.com</p>
+                                <a href="mailto:pienatale@icloud.com">pienatale@icloud.com</a>
                             </div>
                     </div>
                 </div>
